dfir_rs/tests/compile-fail/stable/surface_join_persistence_bad.stderr
error: Unknown lifetime generic argument `'a`, expected `'none`, `'loop`, `'tick`, or `'static`.
 --> tests/compile-fail/stable/surface_join_persistence_bad.rs:5:20
  |
5 |         j = join::<'a>() -> for_each(std::mem::drop);
  |                    ^^
